--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,9 @@
 \usepackage{subcaption}
 \usepackage[onehalfspacing]{setspace}
 \usepackage[english]{babel}
+\usepackage[most]{tcolorbox}
+\usepackage{tabularx}
+% \usepackage[table]{xcolor}    % loads also »colortbl«
 
 \linenumbers
 
@@ -44,7 +47,8 @@ $^{2}$Laboratory X, Institute X, Department X, Organization X, City X , State XX
 % Phenotypic plasticity can promote the evolution of complex features in fluctuating environments
 % Phenotypic plasticity can simultaneously slow rate of evolutionary change and promote evo of complex features 
 % Adaptive plasticity buffers population against fluctuations, promoting novel trait evolution/retention
-\title[The evolutionary consequences of plasticity]{Phenotypic plasticity can promote the evolution and maintenance of complex features in fluctuating environments} 
+% Phenotypic plasticity can promote the evolution and maintenance of complex features in fluctuating environments
+\title[The evolutionary consequences of adaptive plasticity]{The evolutionary consequences of adaptive phenotypic plasticity} 
 
 \author[\firstAuthorLast ]{\Authors} %This field will be automatically populated
 \address{} %This field will be automatically populated
@@ -81,6 +85,6 @@ $^{2}$Laboratory X, Institute X, Department X, Organization X, City X , State XX
 \input{tex/acknowledgements}
 
 \bibliographystyle{frontiersinSCNS_ENG_HUMS} 
-\bibliography{references,ferguson}
+\bibliography{references,software,ferguson}
 
 \end{document}
