--- a/references.bib
+++ b/references.bib
@@ -1012,5 +1012,20 @@
 	file = {Wilke_Adami_2002_The_biology_of_digital_organisms.pdf:/Users/amlalejini/Dropbox/Library/research-bibliography/Wilke_Adami_2002_The_biology_of_digital_organisms.pdf:application/pdf}
 }
 
-
+@article{allen_raincloud_2019,
+	title = {Raincloud plots: a multi-platform tool for robust data visualization},
+	volume = {4},
+	issn = {2398-502X},
+	shorttitle = {Raincloud plots},
+	url = {https://wellcomeopenresearch.org/articles/4-63/v1},
+	doi = {10.12688/wellcomeopenres.15191.1},
+	language = {english},
+	urldate = {2020-12-11},
+	journal = {Wellcome Open Research},
+	author = {Allen, Micah and Poggiali, Davide and Whitaker, Kirstie and Marshall, Tom Rhys and Kievit, Rogier A.},
+	month = apr,
+	year = {2019},
+	pages = {63},
+	file = {Allen_et_al_2019_Raincloud_plots.pdf:/home/amlalejini/Dropbox/Library/research-bibliography/Allen_et_al_2019_Raincloud_plots.pdf:application/pdf}
+}
 
