--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -23,6 +23,8 @@ We find that phenotypic plasticity stabilizes populations against environmental 
 As such, plastic populations are more likely to retain novel adaptive traits than their non-plastic counterparts. 
 All natural environments subject populations to some form of change; our findings suggest that the stabilizing effect of phenotypic plasticity plays an important role in subsequent adaptive evolution.
 
+[Indeed, the evolution of phenotypic plasticity shifted many dynamics to be more similar to populations evolving in a static environment than that of non-plastic populations evolving].
+
 % To our knowledge, this study is the first in-depth empirical investigation into how the \textit{de novo} evolution of adaptive plasticity shifts the course of subsequent evolution; we intend for this work to demonstrate the value of digital evolution in .....
 
 \input{tex/keywords}
