--- a/tex/scratch.tex
+++ b/tex/scratch.tex
@@ -564,3 +564,72 @@ We conducted a series of experiments using Avida to investigate how the evolutio
 
 % Indeed, previous work experimentally demonstrated the \textit{de novo} evolution of adaptive phenotypic plasticity given these conditions in Avida \citep{clune_investigating_2007,lalejini_evolutionary_2016}.
 % Maybe this too: These experiments build directly on previous digital evolution studies on the evolution of adaptive phenotypic plasticity \citep{clune_investigating_2007,lalejini_evolutionary_2016} and on the evolutionary consequences of fluctuating environments \citep{wilke_evolution_2001,canino-koning_fluctuating_2019}.
+
+% This result is consistent with both theoretical models predicting that adaptive plasticity can constrain evolutionary change by reducing directional selection on evolving populations .
+% A recent empirical study with \textit{Poecilia reticulata} found that adaptive plasticity 
+% Our results are also consistent with empirical studies demonstrating the potential for reduced evolutionary divergence in adaptively plastic traits \citep{ghalambor_non-adaptive_2015}.
+% [Ghalambor (2015 - guppies].
+% [For example], \cite{ghalambor_non-adaptive_2015} transplanted \textit{Poecilia reticulata} adapted to living with cichlid predators to cichlid-free streams and tested for subsequent evolutionary changes in gene expression patterns.
+% After three to four generations, Ghalambor \textit{et al.} found that...
+
+% After each environmental change, any accumulated cryptic variation in plastic genotypes would have been exposed to selection, potentially resulting in a rapid an evolutionary response \citep{wund_assessing_2012}.
+% However, we did not find compelling evidence for this effect in our experiments, as the evolutionary dynamics of plastic populations were generally comparable to that of non-plastic populations evolving in static environments.
+
+% any non-plastic generalist (e.g., that performed all tasks or performed no tasks) would have been quickly outcompeted by a specialist strategy because of the large fitness benefit for performing environment-specific tasks (and only those tasks).
+% As such, non-plastic populations repeatedly required genetic modifications to respond to environmental changes and thus exhibited frequent selective sweeps during each new readaptation.
+% Indeed, across all three of our experiments, the evolutionary dynamics of plastic populations were more similar to that of populations evolving in a static environment than to that of non-plastic populations evolving in an identical fluctuating environment.
+
+% Indeed, previous work experimentally demonstrated the \textit{de novo} evolution of adaptive phenotypic plasticity under these conditions in Avida \citep{clune_investigating_2007,lalejini_evolutionary_2016}.
+% Here, we shift from focusing on the evolutionary causes of phenotypic plasticity to investigate its evolutionary consequences.
+
+% WOULD BE NICE: [relevant examples of these dynamics from literature].
+% - Rapid evolutionary change (strong directional selection) => rapid genetic and phenotypic responses.
+% Indeed, many empirical studies demonstrating rapid evolutionary responses to directional selection [????].
+
+%In phase two, we examined the subsequent evolution of populations founded with organisms from phase one under given treatment conditions.
+% Phase two differed among each of our experiments (described in Sections [X,Y,and Z]). %, depending the goal of the particular experiment.]
+
+% -- Phase one => Phase two --
+% @AML: I could see these details moving to their respective 'phase sections'!!
+% At the beginning of phase one [in each experiment], we founded 100 independent [replicate?] populations for each of three treatment conditions (described below).
+% Each phase-one population was founded with a common ancestral strain capable only of self-replication [cite - supplement].
+% At the end of phase one, we used the most abundant genotype from each replicate to found a new population for phase two. 
+% During phase two, we evolved these new populations in their treatment-specific conditions, tracking their evolutionary history as well as saving the full final population.
+% All comparisons between treatments were performed on data from populations during phase two.
+
+% Each rewarded task performed by an organism doubles their metabolic rate (allowing them to execute twice as many instructions in the same amount of time), and each punished task performed halves their metabolic rate. 
+% A task performed by an organism doubles their metabolic rate if it is rewarded (allowing them to execute twice as many instructions in the same amount of time), or halves their metabolic rate if it is punished. 
+
+% Each phase-one population was founded with a common ancestral strain capable only of self-replication [cite - supplement].
+%Phase one gives populations time (200,000 updates) to adapt to their treatment conditions, affording adaptive phenotypic plasticity the opportunity to evolve \textit{de novo} in the PLASTIC treatment.
+
+% @AML: not sure this is the *best* way to define optimal plasticity (it misses on it being okay if the genome performs neutral tasks).
+% An optimally plastic genotype expresses only the NOT, AND, and OR logic functions in ENV-A and performs only the OR-NOT, OR, and AND-NOT in ENV-B.
+% An optimally plastic genotype expresses each of the rewarded tasks in a given environment and none of the punished tasks in that environment.
+
+% To do so, we compared the genomic and phenotypic changes along the lineages and phylogenies of adaptively plastic and non-plastic populations. 
+% Figure \ref{fig:evolutionary-dynamics} shows the coalescence event count, mutation count, and phenotypic volatility for the PLASTIC, NON-PLASTIC, and STATIC treatments.
+
+% [We are specifically interested in contrasting the evolutionary effects of adaptive plasticity relative to non-plastic populations evolving in identical fluctuating environments.]
+% Does adaptive plasticity constrain evolutionary change as predicted by conventional evolutionary theory, and if so, does adaptive plasticity negate the [effects of environmental change on evolutionary exploration]? 
+%promoted or constrained subsequent genomic and phenotypic change.
+% [If so, does adaptive plasticity negate the [effects of environmental change on evolutionary exploration]? 
+
+% In asexual populations without ecological interactions fostering coexistence, phylogenies should coalesce periodically; that is, the most recent common ancestor shared by the extant population should change.
+% The rate that these coalescence events occur can indicate the strength of selection.
+% For example, populations under strong selective pressures should experience more rapid coalescence events than populations under weaker selection \citep{dolson_interpreting_2020}.
+
+% To do so, we compared the coalescence event count, mutation count, phenotypic volatility, and mutational stability of adaptively plastic populations to that of non-plastic populations (see Table \ref{tab:metrics-definitions} for descriptions of each metric).
+% The number of coalescence events indicates the frequency of selective sweeps in the population.
+% Each of mutation count, phenotypic volatility, and mutational stability are measures of genomic and phenotypic changes along a given lineage.
+% We additionally used instruction knockout analyses to identify how the genetic architectures of digital organisms changed over time. 
+% Mutation count, phenotypic volatility, and 
+% Mutation count measures the total genomic change along a given lineage, phenotypic volatility indicates the total number of phenotypic changes over
+
+% For each replicate's representative lineage, we measured mutational stability as the fraction of mutated offspring whose phenotypic profile matches that of their parent. 
+% [Similar to] Phenotypic fidelity measures the frequency of phenotypic changes among \textit{all} offspring along a lineage, whereas mutational stability focuses just on mutated offspring.
+% For lineages evolved in fluctuating environments, we evaluated mutants under both environmental conditions and counted all changes in their phenotypic task profile.
+% Consistent with both genotypic and phenotypic fidelity, 
+
+% Conversely, we expect fluctuating conditions to continuously knock populations off fitness peaks, thus producing lineages with low fidelity and frequent coalescence events as populations continually readapt.
+%Under fluctuating conditions, however, only plastic lineages are able to maintain high fitness and mutational stability.
