--- a/tex/figures/reaction-norms.tex
+++ b/tex/figures/reaction-norms.tex
@@ -2,8 +2,17 @@
     \centering
     \includegraphics[width=\textwidth]{media/reaction-norms.pdf}
     \caption{\small
-    \textbf{todo.}
-    todo.
+    \textbf{Hypothetical reaction norms for genotypes that exhibit phenotypic variation.}
+    (a) through (d) show four hypothetical reaction norm scenarios for the environmental change described in (e).  
+    In (e), the environment changes from E$_1$ (in red) to E$_2$ (in blue), and the optimal phenotypes for environments E$_1$ and E$_2$ are different (O$_{\text{E}1}$ and O$_{\text{E}2}$, respectively).
+    In each of the four reaction norm scenarios, populations are well-adapted to E$_1$.
+    In (a), genotypes in the population are non-plastic, and as such, we would expect strong directional selection on mutations that move phenotypes toward O$_{\text{E}2}$ after the environment changes.
+    In (b), genotypes in the population are adaptively plastic. 
+    That is, phenotypic changes induced by the environment change to E$_2$ are near the optimum, and as such, we would expect this population to remain relatively stable after the environment changes.
+    In (c), the population exhibits non-adaptive plasticity with substantial variation in how individuals respond to the environmental change. 
+    In this case, we expect plasticity to result in a rapid evolutionary response to the change in environment.  
+    In (d), the population exhibits maladaptive plasticity relative to the given environmental change. 
+    When the environment changes, there is little variation for selection to act on, and without beneficial mutations, this population may be at risk of extinction due to their maladaptive plastic response to the environment.
     }
     \label{fig:reaction-norms}
 \end{figure}
